--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -69,6 +69,9 @@
 
     font-family: 'Poppins', sans-serif;
   }
+  .cardroulette {
+    background-image: url('../images/bgcardroulette.png');
+  }
 }
 
 /* :root {
