feat : Add overlay resultat roulette

--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -72,6 +72,9 @@
   .cardroulette {
     background-image: url('../images/bgcardroulette.png');
   }
+  .no-scroll {
+    overflow: hidden;
+  }
 }
 
 /* :root {
