--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 44 85% 92%; /* #FEF4D7 in HSL */
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
