--- a/front/src/components/project/wheel/wheel.module.css
+++ b/front/src/components/project/wheel/wheel.module.css
@@ -16,11 +16,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-  width: 100px;
-  height: 100px;
+  /* width: 25%;
+  height: 25%; */
   border-radius: 50%;
   color: white;
-  font-size: 20px;
+  /* font-size: 1em; */
   border: none;
   cursor: pointer;
 }
